package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")


ng_module(
  name = "datepicker",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/datepicker",
  deps = [
    "@rxjs",
    "//src/cdk/coercion",
    "//src/lib/core",
    "//src/lib/form-field",
    "//src/lib/input",
  ],
  tsconfig = "//src/cdk:tsconfig-build.json",
)

ts_library(
  name = "datepicker_test_sources",
  testonly = 1,
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    ":datepicker",
    "@rxjs",
  ],
  tsconfig = "//src/cdk:tsconfig-build.json",
)

ts_web_test(
  name = "unit_tests",
  bootstrap = ["//:web_test_bootstrap_scripts"],
  # Do not sort
  deps = [
    "//:tslib_bundle",
    "//:angular_bundles",
    "//:angular_test_bundles",
    "//test:angular_test_init",
    ":datepicker_test_sources",
  ],
)
